refactor: seal mappers, migrate streams to toList()